# admin-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate.py  main.cpp
.github/workflows/: build.yml
contracts/: extmsg-test.fc  extmsg-test.fif
fif-scripts/: dataof-cfg.fif  dataof-chk.fif  export-cfg.fif  extmsg-cfg.fif  extmsg-chk.fif  import-cfg.fif
gql-client/: gql-client.cpp  gql-client.hpp
json-block/: Cargo.toml
json-block/include/: json-block.h
json-block/src/: lib.rs
