[package]
name = "json-block"
version = "0.1.0"
edition = "2021"

[dependencies]
ton_block = { git = 'https://github.com/tonlabs/ever-block', tag = '1.9.70' }
ton_types = { git = 'https://github.com/tonlabs/ever-types', tag = '2.0.12' }
ton_block_json = { git = 'https://github.com/tonlabs/ever-block-json', tag = '0.7.147' }

serde = '1.0'
serde_derive = '1.0'
serde_json = { features = ["preserve_order"], version = '1.0' }

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
